<resources>
    <string name="app_name">Inoxia</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Menu Item -->
    <string name="scan">Barcode Scanner</string>
    <string name="inventory">Inventory</string>
    <string name="add">Add product(s)</string>
    <string name="remove">Remove product(s)</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <!-- Product Categories -->
    <string name="speedtiles">SpeedTiles</string>
    <string name="speedtilesback">Backsplashes SpeedTiles</string>
    <string name="backsplashes">Backsplashes</string>
    <string name="loft">Loft series</string>
    <string name="care">Care products</string>

    <!-- Add layout title -->
    <string name="category">Product Category</string>
    <string name="product">Product</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>@string/scan</item>
        <item>@string/inventory</item>
        <item>@string/add</item>
        <item>@string/remove</item>
        <item>@string/share</item>
        <item>@string/send</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_scan_barcode">ScanBarcode</string>
    <string name="title_activity_products">Products</string>
</resources>
