<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.minh.inoxia.RemoveFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCategory"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@android:color/black" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerCategory" />

        <TextView
            android:text="@string/product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtProduct"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerProduct" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextNumber"
            android:textAlignment="center"
            android:numeric="integer" />

        <Button
            android:text="@string/remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/boutRemove" />
    </LinearLayout>

</FrameLayout>
